add google login feature, fix student fetching to be from the current user only.